# fit2json

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/fit2json/: __init__.py  analyzer.py  cli.py  models.py  output.py  parser.py  sampler.py
src/fit2json/sources/: __init__.py  garmin.py  local.py  strava.py
tests/: test_cli.py  test_models.py  test_sampler.py
